@@ -22,7 +22,6 @@ import org.opensearch.rest.BytesRestResponse;
 import org.opensearch.rest.RestRequest;
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
 
@@ -31,11 +30,11 @@ import com.wazuh.commandmanager.index.CommandIndex;
 import com.wazuh.commandmanager.model.Agent;
 import com.wazuh.commandmanager.model.Command;
 import com.wazuh.commandmanager.model.Document;
-import com.wazuh.commandmanager.settings.CommandManagerSettings;
 import com.wazuh.commandmanager.utils.httpclient.HttpRestClientDemo;
 
 import static org.opensearch.core.xcontent.XContentParserUtils.ensureExpectedToken;
 import static org.opensearch.rest.RestRequest.Method.POST;
+import static com.wazuh.commandmanager.utils.httpclient.HttpRestClientDemo.SECURITY_USER_AUTHENTICATE;
 
 /**
  * Handles HTTP requests to the POST {@value
@@ -47,16 +46,14 @@ public class RestPostCommandAction extends BaseRestHandler {
             "post_command_action_request_details";
     private static final Logger log = LogManager.getLogger(RestPostCommandAction.class);
     private final CommandIndex commandIndex;
-    private final CommandManagerSettings settings;
 
     /**
      * Default constructor
      *
      * @param commandIndex persistence layer
      */
-    public RestPostCommandAction(CommandIndex commandIndex, CommandManagerSettings settings) {
+    public RestPostCommandAction(CommandIndex commandIndex) {
         this.commandIndex = commandIndex;
-        this.settings = settings;
     }
 
     public String getName() {
@@ -65,9 +62,10 @@ public class RestPostCommandAction extends BaseRestHandler {
 
     @Override
     public List<Route> routes() {
-        return Collections.singletonList(
+        return List.of(
                 new Route(
-                        POST, String.format(Locale.ROOT, "%s", CommandManagerPlugin.COMMANDS_URI)));
+                        POST, String.format(Locale.ROOT, "%s", CommandManagerPlugin.COMMANDS_URI)),
+                new Route(POST, String.format(Locale.ROOT, "%s", SECURITY_USER_AUTHENTICATE)));
     }
 
     @Override
@@ -75,6 +73,18 @@ public class RestPostCommandAction extends BaseRestHandler {
             throws IOException {
         switch (request.method()) {
             case POST:
+                if (request.uri().contains(SECURITY_USER_AUTHENTICATE)) {
+                    log.info("Mocking M_API basic authentication");
+                    return channel -> {
+                        BytesRestResponse mockResponse =
+                                new BytesRestResponse(
+                                        RestStatus.OK,
+                                        "application/json",
+                                        "{\"data\": { \"token\": \"test-jwt-token\" } }");
+                        channel.sendResponse(mockResponse);
+                    };
+                }
+
                 return handlePost(request);
             default:
                 throw new IllegalArgumentException(
@@ -109,12 +119,11 @@ public class RestPostCommandAction extends BaseRestHandler {
         // Commands delivery to the Management API.
         // Note: needs to be decoupled from the Rest handler (job scheduler task).
         try {
-            String receiverURI = this.settings.getUri();
             String payload =
                     document.toXContent(XContentFactory.jsonBuilder(), ToXContent.EMPTY_PARAMS)
                             .toString();
             SimpleHttpResponse response =
-                    HttpRestClientDemo.runWithResponse(receiverURI, payload, document.getId());
+                    HttpRestClientDemo.runWithResponse(payload, document.getId());
             log.info("Received response to POST request with code [{}]", response.getCode());
             log.info("Raw response:\n{}", response.getBodyText());
         } catch (Exception e) {
